--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <p>My name is Meybili Olivares, i realized a changes in the main from github </p>
     <p>I love Salchipapa with encebollado <3 </p>
     <p>Blackpink <3</p>
-    <h2>Hola Mundo desde la instancia con IP: $(hostname -f)</h2>
+    <h2>Hola Mundo desde la instancia con IP: {{INSTANCE_IP}}</h2>
 </body>
 </html>
